--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ResourceFlow</title>
+
+    <style>
+      df-messenger {
+        --df-messenger-chat-background-color: #ffffff; 
+        --df-messenger-button-titlebar-color: #4a61f8;
+        --df-messenger-font-color: #000000; 
+      }
+    </style>
+
+    <script
+      src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"
+      async
+    ></script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
